// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`selectableCardField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_mzeuq80 uv_mzeuq81 uv_mzeuq85 uv_mzeuq86 uv_xf61n40 uv_xf61n4v uv_xf61n42d uv_xf61n45j"
        data-checked="false"
        data-disabled="false"
        data-error="false"
        data-type="radio"
        role="button"
        style="--uv_1d8tbmb3: 1; --uv_8im5570: none; --uv_8im5571: inline; --uv_8im5572: 100%;"
        tabindex="0"
      >
        <div
          class="uv_v3r5nr0 uv_xf61n40 uv_xf61n42d uv_xf61n45j"
        >
          <div
            aria-disabled="false"
            class="uv_mzeuq8d uv_v3r5nr4 uv_v3r5nr2"
            data-checked="false"
            data-invalid="false"
          >
            <input
              aria-disabled="false"
              class="uv_v3r5nra"
              id="_r_2_"
              name="test"
              tabindex="-1"
              type="radio"
              value="test"
            />
            <svg
              class="uv_v3r5nrb"
              viewBox="0 0 24 24"
            >
              <title>
                radio
              </title>
              <g>
                <circle
                  class="uv_v3r5nre"
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="6"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="2"
                />
                <circle
                  class="uv_v3r5nrd"
                  cx="12"
                  cy="12"
                  r="8"
                />
                <circle
                  class="uv_v3r5nrc"
                  cx="12"
                  cy="12"
                  r="5"
                />
              </g>
            </svg>
            <label
              class="uv_v3r5nr7 uv_v3r5nr5 uv_v3r5nr8 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsj uv_1do42ls1a uv_1do42ls32"
              for="_r_2_"
            >
              test
            </label>
          </div>
        </div>
        <div
          class="uv_mzeuq8b uv_xf61n40 uv_xf61n42d"
          data-has-default-cursor="false"
          data-has-label="false"
          style="--uv_1d8tbmb0: 100%;"
        >
          Radio field
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`selectableCardField > should render correctly checked 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_mzeuq80 uv_mzeuq81 uv_mzeuq85 uv_mzeuq86 uv_xf61n40 uv_xf61n4v uv_xf61n42d uv_xf61n45j"
        data-checked="true"
        data-disabled="false"
        data-error="false"
        data-type="radio"
        role="button"
        style="--uv_1d8tbmb3: 1; --uv_8im5570: none; --uv_8im5571: inline; --uv_8im5572: 100%;"
        tabindex="0"
      >
        <div
          class="uv_v3r5nr0 uv_xf61n40 uv_xf61n42d uv_xf61n45j"
        >
          <div
            aria-disabled="false"
            class="uv_mzeuq8d uv_v3r5nr4 uv_v3r5nr2"
            data-checked="true"
            data-invalid="false"
          >
            <input
              aria-disabled="false"
              checked=""
              class="uv_v3r5nra"
              id="_r_i_"
              name="test"
              tabindex="-1"
              type="radio"
              value="checked"
            />
            <svg
              class="uv_v3r5nrb"
              viewBox="0 0 24 24"
            >
              <title>
                radio
              </title>
              <g>
                <circle
                  class="uv_v3r5nre"
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="6"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="2"
                />
                <circle
                  class="uv_v3r5nrd"
                  cx="12"
                  cy="12"
                  r="8"
                />
                <circle
                  class="uv_v3r5nrc"
                  cx="12"
                  cy="12"
                  r="5"
                />
              </g>
            </svg>
            <label
              class="uv_v3r5nr7 uv_v3r5nr5 uv_v3r5nr8 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsj uv_1do42ls1a uv_1do42ls32"
              for="_r_i_"
            >
              test
            </label>
          </div>
        </div>
        <div
          class="uv_mzeuq8b uv_xf61n40 uv_xf61n42d"
          data-has-default-cursor="false"
          data-has-label="false"
          style="--uv_1d8tbmb0: 100%;"
        >
          Radio field checked
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`selectableCardField > should render correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_mzeuq80 uv_mzeuq81 uv_mzeuq85 uv_mzeuq86 uv_xf61n40 uv_xf61n4v uv_xf61n42d uv_xf61n45j"
        data-checked="false"
        data-disabled="true"
        data-error="false"
        data-type="radio"
        role="button"
        style="--uv_1d8tbmb3: 1; --uv_8im5570: none; --uv_8im5571: inline; --uv_8im5572: 100%;"
      >
        <div
          class="uv_v3r5nr0 uv_xf61n40 uv_xf61n42d uv_xf61n45j"
        >
          <div
            aria-disabled="true"
            class="uv_mzeuq8d uv_v3r5nr4 uv_v3r5nr2"
            data-checked="false"
            data-invalid="false"
          >
            <input
              aria-disabled="true"
              class="uv_v3r5nra"
              disabled=""
              id="_r_a_"
              name="test"
              tabindex="-1"
              type="radio"
              value="disabled"
            />
            <svg
              class="uv_v3r5nrb"
              viewBox="0 0 24 24"
            >
              <title>
                radio
              </title>
              <g>
                <circle
                  class="uv_v3r5nre"
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="6"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="2"
                />
                <circle
                  class="uv_v3r5nrd"
                  cx="12"
                  cy="12"
                  r="8"
                />
                <circle
                  class="uv_v3r5nrc"
                  cx="12"
                  cy="12"
                  r="5"
                />
              </g>
            </svg>
            <label
              class="uv_v3r5nr7 uv_v3r5nr5 uv_v3r5nr8 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsj uv_1do42ls1a uv_1do42ls32"
              for="_r_a_"
            >
              test
            </label>
          </div>
        </div>
        <div
          class="uv_mzeuq8b uv_xf61n40 uv_xf61n42d"
          data-has-default-cursor="false"
          data-has-label="false"
          style="--uv_1d8tbmb0: 100%;"
        >
          Radio field disabled
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`selectableCardField > should render correctly with errors 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_mzeuq80 uv_mzeuq81 uv_mzeuq85 uv_mzeuq86 uv_xf61n40 uv_xf61n4v uv_xf61n42d uv_xf61n45j"
        data-checked="false"
        data-disabled="false"
        data-error="true"
        data-type="radio"
        role="button"
        style="--uv_1d8tbmb3: 1; --uv_8im5570: none; --uv_8im5571: inline; --uv_8im5572: 100%;"
        tabindex="0"
      >
        <div
          class="uv_v3r5nr0 uv_xf61n40 uv_xf61n42d uv_xf61n45j"
        >
          <div
            aria-disabled="false"
            class="uv_mzeuq8d uv_v3r5nr4 uv_v3r5nr2"
            data-checked="false"
            data-invalid="true"
          >
            <input
              aria-disabled="false"
              class="uv_v3r5nra"
              id="_r_12_"
              name="test"
              tabindex="-1"
              type="radio"
              value="checked"
            />
            <svg
              class="uv_v3r5nrb"
              viewBox="0 0 24 24"
            >
              <title>
                radio
              </title>
              <g>
                <circle
                  class="uv_v3r5nre"
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="6"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="2"
                />
                <circle
                  class="uv_v3r5nrd"
                  cx="12"
                  cy="12"
                  r="8"
                />
                <circle
                  class="uv_v3r5nrc"
                  cx="12"
                  cy="12"
                  r="5"
                />
              </g>
            </svg>
            <label
              class="uv_v3r5nr7 uv_v3r5nr5 uv_v3r5nr8 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsj uv_1do42ls1a uv_1do42ls32"
              for="_r_12_"
            >
              test
            </label>
          </div>
        </div>
        <div
          class="uv_mzeuq8b uv_xf61n40 uv_xf61n42d"
          data-has-default-cursor="false"
          data-has-label="false"
          style="--uv_1d8tbmb0: 100%;"
        >
          Radio field error
        </div>
      </div>
      <button
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</DocumentFragment>
`;

exports[`selectableCardField > should trigger events correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_mzeuq80 uv_mzeuq81 uv_mzeuq85 uv_mzeuq86 uv_xf61n40 uv_xf61n4v uv_xf61n42d uv_xf61n45j"
        data-checked="true"
        data-disabled="false"
        data-error="false"
        data-type="radio"
        role="button"
        style="--uv_1d8tbmb3: 1; --uv_8im5570: none; --uv_8im5571: inline; --uv_8im5572: 100%;"
        tabindex="0"
      >
        <div
          class="uv_v3r5nr0 uv_xf61n40 uv_xf61n42d uv_xf61n45j"
        >
          <div
            aria-disabled="false"
            class="uv_mzeuq8d uv_v3r5nr4 uv_v3r5nr2"
            data-checked="true"
            data-invalid="false"
          >
            <input
              aria-disabled="false"
              class="uv_v3r5nra"
              id="_r_q_"
              name="test"
              tabindex="-1"
              type="radio"
              value="events"
            />
            <svg
              class="uv_v3r5nrb"
              viewBox="0 0 24 24"
            >
              <title>
                radio
              </title>
              <g>
                <circle
                  class="uv_v3r5nre"
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="6"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="2"
                />
                <circle
                  class="uv_v3r5nrd"
                  cx="12"
                  cy="12"
                  r="8"
                />
                <circle
                  class="uv_v3r5nrc"
                  cx="12"
                  cy="12"
                  r="5"
                />
              </g>
            </svg>
            <label
              class="uv_v3r5nr7 uv_v3r5nr5 uv_v3r5nr8 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsj uv_1do42ls1a uv_1do42ls32"
              for="_r_q_"
            >
              test
            </label>
          </div>
        </div>
        <div
          class="uv_mzeuq8b uv_xf61n40 uv_xf61n42d"
          data-has-default-cursor="false"
          data-has-label="false"
          style="--uv_1d8tbmb0: 100%;"
        >
          Radio field events
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
